--- a/ReadLib/wasm_test.html
+++ b/ReadLib/wasm_test.html
@@ -284,7 +284,7 @@
                             log(`getAutoMove = ${exports._Z11getAutoMovev()}`));
                         getBranchNodes([112, 224, 115, 209, 100, 223, 114, 208], 8);
 
-                        let isFormat = true;
+                        let isFormat = false;
                         createSGFBuffer(exports._Z16getSGFByteLengthb(isFormat))
                             .then(buf => {
                                 log(`bufSize = ${buf.byteLength}`);
