--- a/help/renjuhelp/renjuhelp.html
+++ b/help/renjuhelp/renjuhelp.html
@@ -47,9 +47,13 @@
                 </h4>
             </li>
             <li>
-                <h4>
-                    <a onclick='window.open("./versionHistory.html", "_self")'>更新历史</a>
-                </h4>
+            	<h4>
+            		<a onclick='window.open("../../reset.html", "_self")'>重置数据</a>
+            	</h4>
+            </li><li>
+            	<h4>
+            		<a onclick='window.open("./versionHistory.html", "_self")'>更新历史</a>
+            	</h4>
             </li>
         </ul>
     </notHide>
