--- a/reset.html
+++ b/reset.html
@@ -55,6 +55,9 @@
             .then(() => {
                 document.body.innerHTML += `OK<br>`
             })
+            .then(() => {
+                setTimeout(() => window.top.location.href = "renju.html", 2500);
+            })
             .catch(err => {
                 document.body.innerHTML += `出错了<br>${err}<br>${err.stack}<br>`
             })
