--- a/renju.html
+++ b/renju.html
@@ -401,7 +401,7 @@
                 })
                 .then(() => {
                     localStorage.removeItem("reloadCount"); //window.reloadApp Count
-                    window.test = () => _loadScript(SOURCE_FILES["debugModule"]);
+                    //_loadScript(SOURCE_FILES["debugModule"]);
                 })
                 .then(() => {
                     window.SOURCE_FILES = undefined;
