--- a/ReadLib/blob.html
+++ b/ReadLib/blob.html
@@ -65,7 +65,7 @@
         //alert("ver0905.03")
         let charset = "utf-8";
         let xx = new GB2312UTF8();
-        let renLibDoc = new CRenLibDoc();
+        let renLibDoc = new RenLibDoc();
 
 
         // source: http://stackoverflow.com/a/11058858
