--- a/renju.html
+++ b/renju.html
@@ -35,9 +35,9 @@
         // updata 
         "use strict";
         window.setUpdataVersion = function () {
-            localStorage.removeItem("RENJU_APP_VERSION")
+            localStorage.removeItem("RENJU_APP_VERSION");
         }
-        window.NEW_VERSION = "v2108.01";
+        window.NEW_VERSION = "v2108.02";
         window.OLD_VERDION = localStorage.getItem("RENJU_APP_VERSION"); // if window.OLD_VERDION == null then upDate Version
         if (window.OLD_VERDION != window.NEW_VERSION && window.NEW_VERSION.indexOf("up") + 1) window.OLD_VERDION = null; //强制更新
         
@@ -145,7 +145,7 @@
             "v1718.02": ["支持打开大棋谱(64位浏览器)",
                         "浏览器内存不够时,打开部分棋谱"],
             "v2015.05": ["添加lib转sgf功能"],
-            "v2108.01": ["修复了解题功能的bug"]
+            "v2108.02": ["修复了解题功能的bug"]
         };
         
         window.alertCache = function() {
@@ -244,6 +244,7 @@
                     if (window.CURRENT_VERSION != window.NEW_VERSION) {
                         if (confirm(ASK + PS)) {
                             window.removeServiceWorker()
+                            .then(window.removeOldAppCache)
                             .then(() => {
                                 window.setUpdataVersion();
                                 window.reloadApp()
@@ -400,7 +401,7 @@
                 })
                 .then(() => {
                     localStorage.removeItem("reloadCount"); //window.reloadApp Count
-                    //_loadScript(SOURCE_FILES["debugModule"]);
+                    _loadScript(SOURCE_FILES["debugModule"]);
                 })
                 .then(() => {
                     window.SOURCE_FILES = undefined;
