--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
     <link rel="shortcut icon" sizes=128x128 href=./icon.png>
     <link rel=apple-touch-icon href=./icon.png>
     <link rel=icon href=./icon.ico>
-    <title>摆棋小工具</title>
+    <title>五子棋小工具</title>
     
     <link href="./style/main.css" rel="stylesheet" type="text/css">
     <style type="text/css">
@@ -59,9 +59,9 @@
         viewport.setAttribute("content", `width=480, initial-scale=${scale}, minimum-scale=${scale}, maximum-scale =${scale}, user-scalable=no`);
     </script>
     <div class="main">
-        <h1> <a href="./renju.html" style="color:black"> <img src="./pic/favicon1.ico"> 五子棋摆棋计算 </a> <a href="./help/renjuhelp/renjuhelp.html" style="color:pink"> &nbsp;&nbsp;&nbsp;使用说明 </a> </h1>
+        <h1> <a href="./renju.html" style="color:black"> <img src="./pic/favicon1.ico"> 摆棋小工具 </a> <a href="./help/renjuhelp/renjuhelp.html" style="color:pink"> &nbsp;&nbsp;&nbsp;使用说明 </a> </h1>
         <h1> <a href="./tuya.html" style="color:black"> <img src="./pic/favicon.ico"> 棋盘图片标记 </a> <a href="./help/tuyahelp/tuyahelp.html" style="color:pink"> &nbsp;&nbsp;&nbsp;使用说明 </a> </h1>
-        <h1> <a href="./lib2sgf.html" style="color:black"> <img src="./pic/ay8gf-i79zr-001.ico"> LIB2SGF </a></h1>
+        <h1> <a href="./lib2sgf.html" style="color:black"> <img src="./pic/ay8gf-i79zr-001.ico"> LIB转SGF </a></h1>
     </div>
 </body>
 
