--- a/renju.html
+++ b/renju.html
@@ -61,7 +61,6 @@
             vconsole: "script/debug/vconsole.min.js",
             Button: "script/Button.js",
             emoji: "script/emoji.js",
-            String2Buffer: "script/String2Buffer.js",
             CheckerBoard: "script/CheckerBoard.js",
             control: "script/control.js",
             msgbox: "script/msgbox.js",
@@ -70,6 +69,7 @@
             EvaluatorJScript: "script/EvaluatorJScript.js",
             Evaluator: "script/Evaluator.js",
             TypeBuffer: "script/TypeBuffer.js",
+            TextCoder: "script/TextCoder.js",
             engine: "script/engine.js",
             NoSleep: "script/NoSleep.min.js",
             jspdf: "script/jsPDF/jspdf.umd_01.js",
@@ -87,7 +87,6 @@
 
             IntervalPost: "script/IntervalPost.js",
             RenjuTree: "script/RenjuTree.js",
-            UNICODE2GBK: "ReadLib/script/UNICODE2GBK.js",
             JFile: "ReadLib/script/JFile.js",
             JPoint: "ReadLib/script/JPoint.js",
             LibraryFile: "ReadLib/script/LibraryFile.js",
