--- a/renju.html
+++ b/renju.html
@@ -69,7 +69,7 @@
             EvaluatorJScript: "script/EvaluatorJScript.js",
             Evaluator: "script/Evaluator.js",
             TypeBuffer: "script/TypeBuffer.js",
-            TextCoder: "script/TextCoder.js",
+            TextCoder: "script/TextCoder_bin.js",
             engine: "script/engine.js",
             NoSleep: "script/NoSleep.min.js",
             jspdf: "script/jsPDF/jspdf.umd_01.js",
