--- a/ReadLib/blob.html
+++ b/ReadLib/blob.html
@@ -33,7 +33,7 @@
             display: none;
         }
     </style>
-    <script src="../script/TextCoder_bin.js"></script>
+    <script src="../script/TextCoder.js"></script>
     <script src="./script/JFile.js"></script>
     <script src="./script/JPoint.js"></script>
     <script src="./script/LibraryFile.js"></script>
