--- a/renju.html
+++ b/renju.html
@@ -69,7 +69,7 @@
             EvaluatorJScript: "script/EvaluatorJScript.js",
             Evaluator: "script/Evaluator.js",
             TypeBuffer: "script/TypeBuffer.js",
-            TextCoder: "script/TextCoder_bin.js",
+            TextCoder: "script/TextCoder.js",
             engine: "script/engine.js",
             NoSleep: "script/NoSleep.min.js",
             jspdf: "script/jsPDF/jspdf.umd_01.js",
@@ -98,6 +98,11 @@
             RenjuLib: "ReadLib/script/RenjuLib.js",
             RenLibDoc_wasm: "ReadLib/script/RenLibDoc_wasm.js",
             IndexedDB: "IndexedDB/IndexedDB.js",
+            
+            gif: "gif/gif.js",
+            gifWorker: "gif/gif.worker.js",
+            gifFile: "gif/gifFile.js",
+            CheckerBoardGIF: "gif/CheckerBoardGIF.js",
 
             debugModule: "script/debug/debugModule.js",
             
