--- a/ReadLib/blob.html
+++ b/ReadLib/blob.html
@@ -41,7 +41,7 @@
     <script src="./script/MoveNode.js"></script>
     <script src="./script/Stack.js"></script>
     <script src="./script/RenLibDoc.js"></script>
-    <script src="../script/debug/vconsole.min.js"></script>
+    <script src="./debug/vconsole.min.js"></script>
 </head>
 
 <body>
