--- a/historyGames/test.html
+++ b/historyGames/test.html
@@ -14,7 +14,7 @@
 </head>
 
 <body onload="load()">
-    <script src="../script/CheckerBoard.js"></script>
+    <script src="../CheckerBoard/CheckerBoard.js"></script>
     <script>
         const CODEURLS = ["H5J8H10G10F9F8D5I8C9L10K7G7K13D12J12D13G12J3N7F3I6D8L11K5B3M8A7M3L2E2%%%15%0",
             "H8H6F6E4F8H9K10%%%15%0",
