--- a/lib2sgf.html
+++ b/lib2sgf.html
@@ -25,6 +25,7 @@
         <div id="filename">
         </div>
         <div id="status">
+        打开一个五子棋lib棋谱，自动转换成sgf棋谱。会保留棋谱的标记和注解。
         </div>
         <a id = "downlink"> </a>
     </div>
