--- a/tuya.html
+++ b/tuya.html
@@ -20,7 +20,7 @@
     <script src="./script/Button.js"></script>
     <script src="./script/View.js"></script>
     <script src="./script/msgbox.js"></script>
-    <script src="./script/debug/vconsole.min.js"></script>
+    <script src="debug/vconsole.min.js"></script>
     <script>
         const TYPE_MARK = 1; // 用于point.type,表示当前点上面存在一个标签
         const TYPE_NUMBER = 2; // 用于point.type,表示当前点上面存在一个数字
