--- a/index.html
+++ b/index.html
@@ -59,9 +59,11 @@
         viewport.setAttribute("content", `width=480, initial-scale=${scale}, minimum-scale=${scale}, maximum-scale =${scale}, user-scalable=no`);
     </script>
     <div class="main">
-        <h1> <a href="./renju.html" style="color:black"> <img src="./pic/favicon1.ico"> 摆棋小工具 </a> <a href="./help/renjuhelp/renjuhelp.html" style="color:pink"> &nbsp;&nbsp;&nbsp;使用说明 </a> </h1>
-        <h1> <a href="./tuya.html" style="color:black"> <img src="./pic/favicon.ico"> 棋盘图片标记 </a> <a href="./help/tuyahelp/tuyahelp.html" style="color:pink"> &nbsp;&nbsp;&nbsp;使用说明 </a> </h1>
-        <h1> <a href="./lib2sgf.html" style="color:black"> <img src="./pic/ay8gf-i79zr-001.ico"> LIB转SGF </a></h1>
+        <h1> <a href="./renju.html" style="color:black">摆棋小工具 </a></h1>
+        <h1> <a href="./tuya.html" style="color:black"> 棋盘图片标记 </a></h1>
+        <h1> <a href="./lib2sgf.html" style="color:black">LIB转SGF </a></h1>
+        <h1> <a href="./renjueditor.html" style="color:black"> 习题编辑器</a></h1>
+        <h1> <a href="./makevcf.html" style="color:black">制作VCF </a></h1>
     </div>
 </body>
 
