--- a/help/renjuhelp/renjuhelp.html
+++ b/help/renjuhelp/renjuhelp.html
@@ -50,9 +50,20 @@
             	<h4>
             		<a onclick='window.open("../../reset.html", "_self")'>重置数据</a>
             	</h4>
-            </li><li>
+            </li>
+            <li>
             	<h4>
             		<a onclick='window.open("./versionHistory.html", "_self")'>更新历史</a>
+            	</h4>
+            </li>
+            <li>
+            	<h4>
+            		<a onclick='window.open("../../renjueditor.html", "_blank")'>习题编辑器</a>
+            	</h4>
+            </li>
+            <li>
+            	<h4>
+            		<a onclick='window.open("../../makevcf.html", "_blank")'>制作VCF</a>
             	</h4>
             </li>
         </ul>
