--- a/makevcf.html
+++ b/makevcf.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <title>习题编辑器</title>
+    <title>制作VCF</title>
     <link href="./style/main.css" rel="stylesheet" type="text/css">
     <!--
     <link rel="preload" href="emoji/emoji.js" as="script">
@@ -13,14 +13,13 @@
     <link rel="preload" href="script/bindEvent.js" as="script">
     <link rel="preload" href="script/Button.js" as="script">
     <link rel="preload" href="CheckerBoard/CheckerBoard.js" as="script">
-    <link rel="preload" href="CheckerBoard/image2board.js" as="script">
     <link rel="preload" href="script/mainUI.js" as="script">
-    <link rel="preload" href="pdf/pdf.js" as="script">
-    <link rel="preload" href="renjueditor/myPDFJS.js" as="script">
-    <link rel="preload" href="zip/jszip.min.js" as="script">
-    <link rel="preload" href="renjueditor/myZip.js" as="script">
-    <link rel="preload" href="renjueditor/main.js" as="script">
-    <link rel="preload" href="renjueditor/renjuEditor.js" as="script">
+    <link rel="preload" href="TypeBuffer/TypeBuffer.js" as="script">
+    <link rel="preload" href="script/RenjuTree.js" as="script">
+    <link rel="preload" href="makevcf/makeVCF.js" as="script">
+    <link rel="preload" href="eval/engine.js" as="script">
+    <link rel="preload" href="makevcf/main.js" as="script">
+    <link rel="preload" href="IndexedDB/IndexedDB.js" as="script">
     -->
 </head>
 
@@ -31,14 +30,17 @@
     <script src="script/bindEvent.js"></script>
     <script src="script/Button.js"></script>
     <script src="CheckerBoard/CheckerBoard.js"></script>
-    <script src="CheckerBoard/image2board.js"></script>
+    <script src="CheckerBoard/saveFile.js"></script>
     <script src="script/mainUI.js"></script>
-    <script src="pdf/pdf.js"></script>
-    <script src="renjueditor/myPDFJS.js"></script>
-    <script src="zip/jszip.min.js"></script>
-    <script src="renjueditor/myZip.js"></script>
-    <script src="renjueditor/main.js"></script>
+    <script src="TypeBuffer/TypeBuffer.js"></script>
+    <script src="script/RenjuTree.js"></script>
+    <script src="makevcf/makeVCF.js"></script>
+    <script src="eval/engine.js"></script>
+    <script src="makevcf/main.js"></script>
+    <script src="renju/share.js"></script>
+    <script src="script/msgbox.js"></script>
     <script src="renjueditor/renjuEditor.js"></script>
+    <script src="IndexedDB/IndexedDB.js"></script>
 
 </body>
 
