--- a/index.html
+++ b/index.html
@@ -60,6 +60,7 @@
     </script>
     <div class="main">
         <h1> <a href="./renju.html" style="color:black">摆棋小工具 </a></h1>
+        <h1> <a href="./dbread.html" style="color:black">DB阅读器</a></h1>
         <h1> <a href="./tuya.html" style="color:black"> 棋盘图片标记 </a></h1>
         <h1> <a href="./lib2sgf.html" style="color:black">LIB转SGF </a></h1>
         <h1> <a href="./renjueditor.html" style="color:black"> 习题编辑器</a></h1>
