--- a/makevcf.html
+++ b/makevcf.html
@@ -35,6 +35,9 @@
     <script src="TypeBuffer/TypeBuffer.js"></script>
     <script src="script/RenjuTree.js"></script>
     <script src="makevcf/makeVCF.js"></script>
+    <script src="eval/EvaluatorJScript.js"></script>
+    <script src="eval/EvaluatorWebassembly.js"></script>
+    <script src="eval/Evaluator.js"></script>
     <script src="eval/engine.js"></script>
     <script src="makevcf/main.js"></script>
     <script src="renju/share.js"></script>
