--- a/help/renjuhelp/renjuhelp.html
+++ b/help/renjuhelp/renjuhelp.html
@@ -58,13 +58,23 @@
             </li>
             <li>
             	<h4>
-            		<a onclick='window.open("../../renjueditor.html", "_blank")'>习题编辑器</a>
+            		<a onclick='window.open("../../dbread.html", "_blank")'>DB阅读器</a>
             	</h4>
             </li>
             <li>
             	<h4>
-            		<a onclick='window.open("../../makevcf.html", "_blank")'>制作VCF</a>
+            		<a onclick='window.open("../../renjueditor.html", "_blank")'>习题编辑器</a>
             	</h4>
+            </li>
+            <li>
+                <h4>
+                    <a onclick='window.open("../../makevcf.html", "_blank")'>制作VCF</a>
+                </h4>
+            </li>
+            <li>
+                <h4>
+                    <a onclick='window.open("../../index.html", "_blank")'> 网站首页</a>
+                </h4>
             </li>
         </ul>
     </notHide>
