--- a/renju.html
+++ b/renju.html
@@ -9,143 +9,16 @@
     <meta name="apple-mobile-web-app-status-bar-style" content="default">
     <meta name="apple-mobile-web-app-title" content="摆棋小工具">
     <meta name="x5-page-mode" content="app">
-    <link rel="shortcut icon" sizes="128x128" href="https://lfz084.github.io/icon.png">
+    <link rel="shortcut icon" sizes="192x192" href="https://lfz084.github.io/icon.png">
     <link rel="apple-touch-icon" href="https://lfz084.github.io/icon.png">
-    <link rel="icon" href="https://lfz084.github.io/icon.ico">
+    <link rel="icon" href="https://lfz084.github.io/icon(128x128).ico">
     <title> 摆棋小工具</title>
-    <style>
-        #mlog {
-            text-align: center;
-            width: 100%;
-            opacity: 0.3;
-        }
-
-        .refresh {
-            font-size: 100px;
-            opacity: 0.93;
-            position: absolute;
-            top: 100px;
-        }
-    </style>
 </head>
 
 <body>
-    <version v="v2109.03"></version>
-    <div id="mlog"></div>
-    <script src="script/serviceWorker.js"></script>
-    <script src="script/upData.js"></script>
-    <script>
-        let re1 = /\?(v|V)\=/,
-            reCode = /#/;
-        window.reloadApp = async function(codeURL) {
-            let reloadCount = localStorage.getItem("reloadCount") || 0,
-                url = window.location.href.split("?")[0] + `?v=${new Date().getTime()}${codeURL ? "#" + codeURL : ""}`
-            Promise.resolve() //如果反复刷新，就删除缓存文件
-                .then(() => ++reloadCount % 15 == 0 ? upData.resetApp() : true)
-                .then(() => {
-                    localStorage.setItem("reloadCount", reloadCount);
-                    window.onbeforeunload = null;
-                    window.location.href = url;
-                })
-        };
-        window.codeURL = window.location.href.split(reCode)[1];
-    </script>
-
-    <script>
-        const BUT = document.getElementById("mlog");
-        window.mlog = (function() {
-            let timer;
-            return function(message) {
-                if (timer) clearTimeout(timer);
-                if (!BUT.parentNode) return;
-                BUT.innerHTML = message;
-                BUT.removeAttribute("class");
-                console.log(message);
-                timer = setTimeout(() => {
-                    BUT.innerHTML = `<a href="renju.html" target="_self">点击刷新</a>`;
-                    BUT.setAttribute("class", "refresh")
-                }, 15 * 1000)
-            }
-        })()
-        let removeMlog = function() {
-            if (BUT && BUT.parentNode) BUT.parentNode.removeChild(BUT);
-            window.mlog = undefined;
-        }
-
-        function strLen(str, len, char = " ", align = "left") {
-            if (align == "left") {
-                return (str + new Array(len).join(char)).slice(0, len)
-            }
-            else {
-                return (new Array(len).join(char) + str).slice(-len)
-            }
-        }
-
-
-
-        document.body.onload = () => {
-
-            function _loadScript(url) { //加载脚本
-                url = url.split("?")[0];
-                const filename = url.split("/").pop().split("?")[0];
-                return new Promise((resolve, reject) => {
-                    let oHead = document.getElementsByTagName('HEAD').item(0);
-                    let oScript = document.createElement("script");
-                    oHead.appendChild(oScript);
-                    oScript.type = "text/javascript";
-                    oScript.rel = "preload";
-                    oScript.as = "script";
-                    oScript.onload = () => {
-                        let message = `_loadScript: "${filename}"`;
-                        setTimeout(() => {
-                            resolve(message);
-                        }, 0);
-                    }
-                    oScript.onerror = (err) => {
-                        let message = `_loadScript_Error: "${filename}"`;
-                        reject(message);
-                    }
-                    oScript.src = url;
-                });
-            }
-            mlog(`body onload`)
-            window.DEBUG = true;
-            upData.checkAppVersion()
-                .then(() => {
-                    mlog("removeOldAppCache ......");
-                    //return window.removeOldAppCache()
-                })
-                .then(() => {
-                    mlog("postVersion ......");
-                    return upData.postVersion()
-                })
-                .then(() => {
-                    mlog("load App ......");
-                    return _loadScript(SOURCE_FILES["loadFile"])
-                })
-                .then(() => {
-                    return _loadScript(SOURCE_FILES["renju_js"]);
-                })
-                .then(() => {
-                    mlog("loadApp source ......");
-                    return loadApp()
-                })
-                .then(() => {
-                    localStorage.removeItem("reloadCount"); //window.reloadApp Count
-                    //_loadScript(SOURCE_FILES["debugModule"]);
-                })
-                .then(() => {
-                    window.SOURCE_FILES = undefined;
-                    window.SCRIPT_VERSIONS = undefined;
-                    //window.UPDATA_INFO = undefined;
-                })
-                .catch((err) => {
-                    const MSG = "❌" + "加载过程出现了错误，准备刷新" + "\n" + (err.stack || err)
-                    alert(MSG)
-                    window.reloadApp()
-                })
-        };
-    </script>
+    <version v="v2109.08"></version>
+    <script src="script/loadFile.js"></script>
+    <script src="script/loadApp.js"></script>
 </body>
 
 </html>
