--- a/dbread.html
+++ b/dbread.html
@@ -14,8 +14,8 @@
     <link rel="preload" href="script/Button.js" as="script">
     <link rel="preload" href="CheckerBoard/CheckerBoard.js" as="script">
     <link rel="preload" href="script/mainUI.js" as="script">
-    <link rel="preload" href="rapfi/main.js" as="script">
-    <link rel="preload" href="rapfi/renjuEditor.js" as="script">
+    <link rel="preload" href="Rapfi/main.js" as="script">
+    <link rel="preload" href="Rapfi/renjuEditor.js" as="script">
     -->
 </head>
 
@@ -29,10 +29,10 @@
     <script src="script/mainUI.js"></script>
     <script src="renju/exWindow.js"></script>
     <script src="lz4/mylz4.js"></script>
-    <script src="rapfi/dbTypes.js"></script>
-    <script src="rapfi/dbclient.js"></script>
-    <script src="rapfi/databass.js"></script>
-    <script src="rapfi/main.js"></script>
+    <script src="Rapfi/dbTypes.js"></script>
+    <script src="Rapfi/dbclient.js"></script>
+    <script src="Rapfi/databass.js"></script>
+    <script src="Rapfi/main.js"></script>
 </body>
 
 </html>
