--- a/Rapfi/test.html
+++ b/Rapfi/test.html
@@ -34,6 +34,7 @@
     <script src="../script/View.js"></script>
     <script src="../script/Button.js"></script>
     <script src="../script/msgbox.js"></script>
+    <script src="../script/maxBuffer.js"></script>
     <script src="../script/utils.js"></script>
     <script src="../lz4/mylz4.js"></script>
     <script src="./dbTypes.js"></script>
