--- a/dbread.html
+++ b/dbread.html
@@ -25,13 +25,13 @@
     <script src="script/utils.js"></script>
     <script src="script/bindEvent.js"></script>
     <script src="script/Button.js"></script>
+    <script src="script/msgbox.js"></script>
+    <script src="renju/share.js"></script>
     <script src="CheckerBoard/CheckerBoard.js"></script>
+    <script src="CheckerBoard/saveFile.js"></script>
     <script src="script/mainUI.js"></script>
-    <script src="renju/exWindow.js"></script>
-    <script src="lz4/mylz4.js"></script>
     <script src="Rapfi/dbTypes.js"></script>
     <script src="Rapfi/dbclient.js"></script>
-    <script src="Rapfi/databass.js"></script>
     <script src="Rapfi/main.js"></script>
 </body>
 
