--- a/dbread.html
+++ b/dbread.html
@@ -32,6 +32,10 @@
     <script src="script/mainUI.js"></script>
     <script src="Rapfi/dbTypes.js"></script>
     <script src="Rapfi/dbclient.js"></script>
+    <script src="eval/Evaluator.wasm"></script>
+    <script src="eval/EvaluatorJScript.js"></script>
+    <script src="eval/EvaluatorWebassembly.js"></script>
+    <script src="eval/Evaluator.js"></script>
     <script src="Rapfi/main.js"></script>
 </body>
 
