--- a/historyGames/test.html
+++ b/historyGames/test.html
@@ -50,8 +50,7 @@
         function load() {
             try {
 
-                cBoard.resetCBoardCoordinate();
-                cBoard.printEmptyCBoard();
+                cBoard.showCheckerBoard();
                 setImgs();
 
             }
