--- a/test.html
+++ b/test.html
@@ -10,9 +10,9 @@
 </head>
 
 <body>
-    <div style="font: normal 150px mHeiTi, emjFont, Symbola">|||...</div>
-    <div style="font: bold 150px mHeiTi, emjFont, Symbola">|||...</div>
-    <div style="font: 900 150px mHeiTi, emjFont, Symbola">|||...</div>
+    <div style="font: normal 150px mHeiTi, Roboto, emjFont, Symbola">|||...</div>
+    <div style="font: bold 150px mHeiTi, Roboto, emjFont, Symbola">|||...</div>
+    <div style="font: 900 150px mHeiTi, Roboto, emjFont, Symbola">|||...</div>
     <canvas id="draw" style="width: 500px; height: 500px"></canvas>
     <script>
         const cBoard = new CheckerBoard(document.body, 0, 1200, 980, 980);
@@ -32,19 +32,19 @@
                 while (canvasList.length) {
                     const ctx = canvasList.pop().getContext("2d");
 
-                    ctx.font = `normal 150px mHeiTi, emjFont, Symbola`;
+                    ctx.font = `normal 150px mHeiTi, Roboto, emjFont, Symbola`;
                     ctx.fillStyle = "black";
                     ctx.textAlign = "center";
                     ctx.textBaseline = "middle";
                     ctx.fillText("|||...", 250, 50);
 
-                    ctx.font = `bold 150px mHeiTi, emjFont, Symbola`;
+                    ctx.font = `bold 150px mHeiTi, Roboto, emjFont, Symbola`;
                     ctx.fillStyle = "black";
                     ctx.textAlign = "center";
                     ctx.textBaseline = "middle";
                     ctx.fillText("|||...", 250, 150);
 
-                    ctx.font = `900 150px mHeiTi, emjFont, Symbola`;
+                    ctx.font = `900 150px mHeiTi, Roboto, emjFont, Symbola`;
                     ctx.fillStyle = "black";
                     ctx.textAlign = "center";
                     ctx.textBaseline = "middle";
