--- a/CheckerBoard/autoput.html
+++ b/CheckerBoard/autoput.html
@@ -10,13 +10,13 @@
 
 <body>
     <script src="../emoji/emoji.js"></script>
-    <script src="../script/View.js"></script>
+    <script src="../UI/View.js"></script>
     <script src="../script/utils.js"></script>
     <script src="../script/bindEvent.js"></script>
-    <script src="../script/Button.js"></script>
+    <script src="../UI/Button.js"></script>
     <script src="CheckerBoard.js"></script>
     <script src="image2board.js"></script>
-    <script src="../script/mainUI.js"></script>
+    <script src="../UI/mainUI.js"></script>
     <script>
         function gray() {
             let sum = 0;
