--- a/makevcf.html
+++ b/makevcf.html
@@ -8,12 +8,12 @@
     <link href="./style/main.css" rel="stylesheet" type="text/css">
     <!--
     <link rel="preload" href="emoji/emoji.js" as="script">
-    <link rel="preload" href="script/View.js" as="script">
+    <link rel="preload" href="UI/View.js" as="script">
     <link rel="preload" href="script/utils.js" as="script">
     <link rel="preload" href="script/bindEvent.js" as="script">
-    <link rel="preload" href="script/Button.js" as="script">
+    <link rel="preload" href="UI/Button.js" as="script">
     <link rel="preload" href="CheckerBoard/CheckerBoard.js" as="script">
-    <link rel="preload" href="script/mainUI.js" as="script">
+    <link rel="preload" href="UI/mainUI.js" as="script">
     <link rel="preload" href="TypeBuffer/TypeBuffer.js" as="script">
     <link rel="preload" href="script/RenjuTree.js" as="script">
     <link rel="preload" href="makevcf/makeVCF.js" as="script">
@@ -25,13 +25,13 @@
 
 <body>
     <script src="emoji/emoji.js"></script>
-    <script src="script/View.js"></script>
+    <script src="UI/View.js"></script>
     <script src="script/utils.js"></script>
     <script src="script/bindEvent.js"></script>
-    <script src="script/Button.js"></script>
+    <script src="UI/Button.js"></script>
     <script src="CheckerBoard/CheckerBoard.js"></script>
     <script src="CheckerBoard/saveFile.js"></script>
-    <script src="script/mainUI.js"></script>
+    <script src="UI/mainUI.js"></script>
     <script src="TypeBuffer/TypeBuffer.js"></script>
     <script src="script/RenjuTree.js"></script>
     <script src="makevcf/makeVCF.js"></script>
@@ -40,8 +40,8 @@
     <script src="eval/Evaluator.js"></script>
     <script src="eval/engine.js"></script>
     <script src="makevcf/main.js"></script>
-    <script src="renju/share.js"></script>
-    <script src="script/msgbox.js"></script>
+    <script src="UI/share.js"></script>
+    <script src="UI/msgbox.js"></script>
     <script src="renjueditor/renjuEditor.js"></script>
 
 </body>
