--- a/tuya.html
+++ b/tuya.html
@@ -7,9 +7,9 @@
     <link rel="preload" href="./style/font/PFSCMedium1.woff" as="font" type="font/woff" crossorigin="anonymous">
     <link rel="preload" href="./style/font/PFSCHeavy1.woff" as="font" type="font/woff" crossorigin="anonymous">
     <link href="./style/main.css" rel="stylesheet" type="text/css">
-    <link rel="preload" href="./script/View.js" as="script">
-    <link rel="preload" href="./script/Button.js" as="script">
-    <link rel="preload" href="./script/msgbox.js" as="script">
+    <link rel="preload" href="./UI/View.js" as="script">
+    <link rel="preload" href="./UI/Button.js" as="script">
+    <link rel="preload" href="./UI/msgbox.js" as="script">
     <title>五子棋涂鸦</title>
 </head>
 
@@ -17,9 +17,9 @@
     <script>
         window.SCRIPT_VERSIONS = {};
     </script>
-    <script src="./script/Button.js"></script>
-    <script src="./script/View.js"></script>
-    <script src="./script/msgbox.js"></script>
+    <script src="./UI/Button.js"></script>
+    <script src="./UI/View.js"></script>
+    <script src="./UI/msgbox.js"></script>
     <script src="debug/vconsole.min.js"></script>
     <script>
         const TYPE_MARK = 1; // 用于point.type,表示当前点上面存在一个标签
