--- a/Rapfi/test.html
+++ b/Rapfi/test.html
@@ -8,9 +8,9 @@
     <link rel="preload" href="../style/font/PFSCMedium1.woff" as="font" type="font/woff" crossorigin="anonymous">
     <link rel="preload" href="../style/font/PFSCHeavy1.woff" as="font" type="font/woff" crossorigin="anonymous">
     <link href="../style/main.css" rel="stylesheet" type="text/css">
-    <link rel="preload" href="../script/View.js" as="script">
-    <link rel="preload" href="../script/Button.js" as="script">
-    <link rel="preload" href="../script/msgbox.js" as="script">
+    <link rel="preload" href="../UI/View.js" as="script">
+    <link rel="preload" href="../UI/Button.js" as="script">
+    <link rel="preload" href="../UI/msgbox.js" as="script">
     <link rel="preload" href="../lz4/mylz4.js" as="script">
     <title>databass</title>
 </head>
@@ -35,9 +35,9 @@
         window.SCRIPT_VERSIONS = {};
     </script>
     <script src="../script/TextCoder.js"></script>
-    <script src="../script/View.js"></script>
-    <script src="../script/Button.js"></script>
-    <script src="../script/msgbox.js"></script>
+    <script src="../UI/View.js"></script>
+    <script src="../UI/Button.js"></script>
+    <script src="../UI/msgbox.js"></script>
     <script src="../script/maxBuffer.js"></script>
     <script src="../script/utils.js"></script>
     <script src="../lz4/mylz4.js"></script>
