--- a/lib2sgf.html
+++ b/lib2sgf.html
@@ -8,9 +8,9 @@
     <link rel="preload" href="./style/font/PFSCMedium1.woff" as="font" type="font/woff" crossorigin="anonymous">
     <link rel="preload" href="./style/font/PFSCHeavy1.woff" as="font" type="font/woff" crossorigin="anonymous">
     <link href="./style/main.css" rel="stylesheet" type="text/css">
-    <link rel="preload" href="./script/View.js" as="script">
-    <link rel="preload" href="./script/Button.js" as="script">
-    <link rel="preload" href="./script/msgbox.js" as="script">
+    <link rel="preload" href="./UI/View.js" as="script">
+    <link rel="preload" href="./UI/Button.js" as="script">
+    <link rel="preload" href="./UI/msgbox.js" as="script">
     <link rel="preload" href="./ReadLib/script/RenjuLib.js" as="script">
     <title>lib2sgf</title>
 </head>
@@ -33,9 +33,9 @@
     <script>
         window.SCRIPT_VERSIONS = {};
     </script>
-    <script src="./script/View.js"></script>
-    <script src="./script/Button.js"></script>
-    <script src="./script/msgbox.js"></script>
+    <script src="./UI/View.js"></script>
+    <script src="./UI/Button.js"></script>
+    <script src="./UI/msgbox.js"></script>
     <script src="./ReadLib/script/RenjuLib.js"></script>
     <script>
         // "a" = 97, "[" = 91, "]" = 93, "(" = 40, ")" = 41, ";" = 59
