--- a/renjueditor.html
+++ b/renjueditor.html
@@ -8,13 +8,13 @@
     <link href="./style/main.css" rel="stylesheet" type="text/css">
     <!--
     <link rel="preload" href="emoji/emoji.js" as="script">
-    <link rel="preload" href="script/View.js" as="script">
+    <link rel="preload" href="UI/View.js" as="script">
     <link rel="preload" href="script/utils.js" as="script">
     <link rel="preload" href="script/bindEvent.js" as="script">
-    <link rel="preload" href="script/Button.js" as="script">
+    <link rel="preload" href="UI/Button.js" as="script">
     <link rel="preload" href="CheckerBoard/CheckerBoard.js" as="script">
     <link rel="preload" href="CheckerBoard/image2board.js" as="script">
-    <link rel="preload" href="script/mainUI.js" as="script">
+    <link rel="preload" href="UI/mainUI.js" as="script">
     <link rel="preload" href="pdf/pdf.js" as="script">
     <link rel="preload" href="renjueditor/myPDFJS.js" as="script">
     <link rel="preload" href="zip/jszip.min.js" as="script">
@@ -26,13 +26,13 @@
 
 <body>
     <script src="emoji/emoji.js"></script>
-    <script src="script/View.js"></script>
+    <script src="UI/View.js"></script>
     <script src="script/utils.js"></script>
     <script src="script/bindEvent.js"></script>
-    <script src="script/Button.js"></script>
+    <script src="UI/Button.js"></script>
     <script src="CheckerBoard/CheckerBoard.js"></script>
     <script src="CheckerBoard/image2board.js"></script>
-    <script src="script/mainUI.js"></script>
+    <script src="UI/mainUI.js"></script>
     <script src="pdf/pdf.js"></script>
     <script src="renjueditor/myPDFJS.js"></script>
     <script src="zip/jszip.min.js"></script>
