--- a/reset.html
+++ b/reset.html
@@ -56,7 +56,7 @@
                 document.body.innerHTML += `OK<br>`
             })
             .then(() => {
-                setTimeout(() => window.top.location.href = "renju.html", 2500);
+                setTimeout(() => window.top.location.href = "index.html", 5000);
             })
             .catch(err => {
                 document.body.innerHTML += `出错了<br>${err}<br>${err.stack}<br>`
