--- a/renju.html
+++ b/renju.html
@@ -9,15 +9,16 @@
     <meta name="apple-mobile-web-app-status-bar-style" content="default">
     <meta name="apple-mobile-web-app-title" content="摆棋小工具">
     <meta name="x5-page-mode" content="app">
-    <link rel="shortcut icon" sizes="192x192" href="https://lfz084.github.io/icon.png">
-    <link rel="apple-touch-icon" href="https://lfz084.github.io/icon.png">
-    <link rel="icon" href="https://lfz084.github.io/icon(128x128).ico">
+    <link rel="shortcut icon" sizes="192x192" href="https://lfz084.gitee.io/icon.png">
+    <link rel="apple-touch-icon" href="https://lfz084.gitee.io/icon.png">
+    <link rel="icon" href="https://lfz084.gitee.io/icon(128x128).ico">
     <title> 摆棋小工具</title>
 </head>
 
 <body>
-    <version v="v2111.03"></version>
+    <version v="v2111.05"></version>
     <script src="script/loadFile.js"></script>
+    <script src="renju/sources.js"></script>
     <script src="script/loadApp.js"></script>
 </body>
 
