--- a/renjueditor.html
+++ b/renjueditor.html
@@ -2,43 +2,25 @@
 <html>
 
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <meta http-equiv="Content-Type" content="text/html; charset=utf-8">
+    <meta http-equiv="Cache-Control" content="no-store">
+    <meta name="mobile-web-app-capable" content="yes">
+    <meta name="apple-mobile-web-app-capable" content="yes">
+    <meta name="apple-mobile-web-app-status-bar-style" content="default">
+    <meta name="apple-mobile-web-app-title" content="摆棋小工具">
+    <meta name="x5-page-mode" content="app">
+    <link rel="shortcut icon" sizes="192x192" href="https://lfz084.gitee.io/icon.png">
+    <link rel="apple-touch-icon" href="https://lfz084.gitee.io/icon.png">
+    <link rel="icon" href="https://lfz084.gitee.io/icon(128x128).ico">
     <title>习题编辑器</title>
-    <link href="./style/main.css" rel="stylesheet" type="text/css">
-    <!--
-    <link rel="preload" href="emoji/emoji.js" as="script">
-    <link rel="preload" href="UI/View.js" as="script">
-    <link rel="preload" href="script/utils.js" as="script">
-    <link rel="preload" href="script/bindEvent.js" as="script">
-    <link rel="preload" href="UI/Button.js" as="script">
-    <link rel="preload" href="CheckerBoard/CheckerBoard.js" as="script">
-    <link rel="preload" href="CheckerBoard/image2board.js" as="script">
-    <link rel="preload" href="UI/mainUI.js" as="script">
-    <link rel="preload" href="pdf/pdf.js" as="script">
-    <link rel="preload" href="renjueditor/myPDFJS.js" as="script">
-    <link rel="preload" href="zip/jszip.min.js" as="script">
-    <link rel="preload" href="renjueditor/myZip.js" as="script">
-    <link rel="preload" href="renjueditor/main.js" as="script">
-    <link rel="preload" href="renjueditor/renjuEditor.js" as="script">
-    -->
 </head>
 
 <body>
-    <script src="emoji/emoji.js"></script>
-    <script src="UI/View.js"></script>
-    <script src="script/utils.js"></script>
-    <script src="script/bindEvent.js"></script>
-    <script src="UI/Button.js"></script>
-    <script src="CheckerBoard/CheckerBoard.js"></script>
-    <script src="CheckerBoard/image2board.js"></script>
-    <script src="UI/mainUI.js"></script>
-    <script src="pdf/pdf.js"></script>
-    <script src="renjueditor/myPDFJS.js"></script>
-    <script src="zip/jszip.min.js"></script>
-    <script src="renjueditor/myZip.js"></script>
-    <script src="renjueditor/main.js"></script>
-    <script src="renjueditor/renjuEditor.js"></script>
+    <version v="v2111.05"></version>
+    <script src="script/loadFile.js"></script>
+    <script src="renjueditor/sources.js"></script>
+    <script src="script/loadApp.js"></script>
 </body>
 
 </html>
+
