--- a/historyGames/test.html
+++ b/historyGames/test.html
@@ -59,9 +59,9 @@
             }
         }
     </script>
-    <img id="0" src="../icon.png"></img>
-    <img id="1" src="../icon.png"></img>
-    <img id="2" src="../icon.png"></img>
+    <img id="0" src="../icon(192x192).png"></img>
+    <img id="1" src="../icon(192x192).png"></img>
+    <img id="2" src="../icon(192x192).png"></img>
 
 </body>
 
