--- a/index.html
+++ b/index.html
@@ -13,8 +13,8 @@
     <meta name=apple-mobile-web-app-status-bar-style content=default>
     <meta name=apple-mobile-web-app-title content=摆棋小工具>
     <meta name=x5-page-mode content=app>
-    <link rel="shortcut icon" sizes=128x128 href=./icon.png>
-    <link rel=apple-touch-icon href=./icon.png>
+    <link rel="shortcut icon" sizes=128x128 href=./icon(192x192).png>
+    <link rel=apple-touch-icon href=./icon(192x192).png>
     <link rel=icon href=./icon.ico>
     <title>五子棋小工具</title>
     
