--- a/renjueditor.html
+++ b/renjueditor.html
@@ -2,16 +2,19 @@
 <html>
 
 <head>
-    <meta http-equiv="Content-Type" content="text/html; charset=utf-8">
-    <meta http-equiv="Cache-Control" content="no-store">
-    <meta name="mobile-web-app-capable" content="yes">
-    <meta name="apple-mobile-web-app-capable" content="yes">
-    <meta name="apple-mobile-web-app-status-bar-style" content="default">
-    <meta name="apple-mobile-web-app-title" content="摆棋小工具">
-    <meta name="x5-page-mode" content="app">
-    <link rel="shortcut icon" sizes="192x192" href="https://lfz084.gitee.io/icon.png">
-    <link rel="apple-touch-icon" href="https://lfz084.gitee.io/icon.png">
-    <link rel="icon" href="https://lfz084.gitee.io/icon(128x128).ico">
+    <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
+    <meta http-equiv="Cache-Control" content="no-store" />
+    <meta name="mobile-web-app-capable" content="yes" />
+    <meta name="apple-touch-fullscreen" content="yes" /> 
+    <meta name="apple-mobile-web-app-capable" content="yes" />
+    <meta name="apple-mobile-web-app-status-bar-style" content="black-translucent" />
+    <meta name="apple-mobile-web-app-title" content="摆棋小工具" />
+    <meta name="x5-page-mode" content="app" />
+    <link rel="shortcut icon" sizes="192x192" href="https://lfz084.gitee.io/icon(192x192).png" type="image/png" />
+    <link rel="icon" href="https://lfz084.gitee.io/icon(128x128).ico" type="image/x-icon" />
+    <link rel="apple-touch-icon" sizes="57x57" href="https://lfz084.gitee.io/icon(57x57).png" type="image/png" />
+    <link rel="apple-touch-icon" sizes="72x72" href="https://lfz084.gitee.io/icon(72x72).png" type="image/png" />
+    <link rel="apple-touch-icon" sizes="114x114" href="https://lfz084.gitee.io/icon(114x114).png" type="image/png" />
     <title>习题编辑器</title>
 </head>
 
