--- a/puzzle.html
+++ b/puzzle.html
@@ -15,15 +15,14 @@
     <link rel="apple-touch-icon" sizes="57x57" href="icon(57x57).png" type="image/png" />
     <link rel="apple-touch-icon" sizes="72x72" href="icon(72x72).png" type="image/png" />
     <link rel="apple-touch-icon" sizes="114x114" href="icon(114x114).png" type="image/png" />
-    <title>制作VCF</title>
+    <title>五子棋解题</title>
 </head>
 
 <body>
     <version v="v2111.08"></version>
     <script src="script/loadFile.js"></script>
-    <script src="makevcf/sources.js"></script>
+    <script src="puzzle/sources.js"></script>
     <script src="script/loadApp.js"></script>
 </body>
 
 </html>
-
