--- a/renju.html
+++ b/renju.html
@@ -10,11 +10,11 @@
     <meta name="apple-mobile-web-app-status-bar-style" content="black-translucent" />
     <meta name="apple-mobile-web-app-title" content="摆棋小工具" />
     <meta name="x5-page-mode" content="app" />
-    <link rel="shortcut icon" sizes="192x192" href="https://lfz084.gitee.io/icon(192x192).png" type="image/png" />
-    <link rel="icon" href="https://lfz084.gitee.io/icon(128x128).ico" type="image/x-icon" />
-    <link rel="apple-touch-icon" sizes="57x57" href="https://lfz084.gitee.io/icon(57x57).png" type="image/png" />
-    <link rel="apple-touch-icon" sizes="72x72" href="https://lfz084.gitee.io/icon(72x72).png" type="image/png" />
-    <link rel="apple-touch-icon" sizes="114x114" href="https://lfz084.gitee.io/icon(114x114).png" type="image/png" />
+    <link rel="shortcut icon" sizes="192x192" href="icon(192x192).png" type="image/png" />
+    <link rel="icon" href="icon(128x128).ico" type="image/x-icon" />
+    <link rel="apple-touch-icon" sizes="57x57" href="icon(57x57).png" type="image/png" />
+    <link rel="apple-touch-icon" sizes="72x72" href="icon(72x72).png" type="image/png" />
+    <link rel="apple-touch-icon" sizes="114x114" href="icon(114x114).png" type="image/png" />
     <title> 摆棋小工具</title>
 </head>
 
