--- a/help/renjuhelp/renjuhelp.html
+++ b/help/renjuhelp/renjuhelp.html
@@ -63,6 +63,11 @@
             </li>
             <li>
             	<h4>
+            		<a onclick='window.open("../../index.html", "_top")'>连珠答题器</a>
+            	</h4>
+            </li>
+            <li>
+            	<h4>
             		<a onclick='window.open("../../renjueditor.html", "_top")'>习题编辑器</a>
             	</h4>
             </li>
